--- a/jpa-streamer/0.1.0/introduction/overview.html
+++ b/jpa-streamer/0.1.0/introduction/overview.html
@@ -89,6 +89,7 @@
 <h1 class="page">JPA Streamer Docs</h1>
 <div class="paragraph">
 <p>JPA Streamer is an extension for JPA provides to allow queries to be expressed as standard Java Streams.</p>
+<p>JPA Streamer can be run with many different JPA providers including Hibernate</p>
 </div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
