--- a/jpa-streamer/0.1.0/getting-started/installation.html
+++ b/jpa-streamer/0.1.0/getting-started/installation.html
@@ -98,7 +98,7 @@
     <span class="nav-text">Stream Fundamentals</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../stream-fundamentals/what_is_a_stream.html">What is a Stream?</a>
+    <a class="nav-link" href="#stream-basics.adoc">What is a Stream?</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
@@ -169,7 +169,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Since JPAStreamer acts merely as an API extension for any existing JPA provider it requires minimal installation and configuration efforts. You simply need to specify that the JPAStreamer dependency is required to compile your source code. Below is a description of how that is done in Maven and Gradle respectively.</p>
+<p>Since JPAStreamer acts merely as an API extension for any existing JPA provider it requires minimal installation and configuration efforts. You only need to specify that the JPAStreamer dependency is required to compile your source code. Below is a description of how that is done in Maven and Gradle respectively.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -189,7 +189,7 @@ JPAStreamer requires use of Java 8 or later.
 <h2 id="_maven"><a class="anchor" href="#_maven"></a>Maven</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In Maven, the follwing JPAStreamer dependency is added to the project&#8217;s pom.xml-file.</p>
+<p>In Maven, the following JPAStreamer dependency is added to the project&#8217;s pom.xml-file:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -212,7 +212,7 @@ JPAStreamer requires use of Java 8 or later.
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code>repositories {
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">repositories {
 	mavenCentral()
 }
 
