--- a/jpa-streamer/0.1.0/getting-started/quick-start.html
+++ b/jpa-streamer/0.1.0/getting-started/quick-start.html
@@ -98,7 +98,7 @@
     <span class="nav-text">Stream Fundamentals</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../stream-fundamentals/what_is_a_stream.html">What is a Stream?</a>
+    <a class="nav-link" href="#stream-basics.adoc">What is a Stream?</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
@@ -228,7 +228,7 @@ Use of JPAStreamer requires Java 8 or later.
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code>repositories {
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">repositories {
 	mavenCentral()
 }
 
@@ -312,10 +312,10 @@ If you are running in an IDE, you may have to manually configure the output targ
 <h2 id="_next_steps"><a class="anchor" href="#_next_steps"></a>Next Steps</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Now that you have access to JPAStreamer it&#8217;s time to put the expressiveness of Java Streams to work. If you are not yet familiar with the <code>Stream</code> API, you may find our guide on <a href="../stream-fundamentals/what_is_a_stream.html" class="page">Stream Fundamentals</a> helpful.</p>
+<p>Now that you have access to JPAStreamer it&#8217;s time to put the expressiveness of Java Streams to work. If you are not yet familiar with the <code>Stream</code> API, you may find our guide on <a href="#stream-fundamentals:stream-basics.adoc" class="page unresolved">Stream Fundamentals</a> helpful.</p>
 </div>
 <div class="paragraph">
-<p>Otherwise, feel free to checkout the large collection of examples of JPAStreamer usage.</p>
+<p>Otherwise, feel free to check out the large collection of examples of JPAStreamer usage.</p>
 </div>
 </div>
 </div>
