--- a/jpa-streamer/0.1.0/stream-fundamentals/terminal_operations.html
+++ b/jpa-streamer/0.1.0/stream-fundamentals/terminal_operations.html
@@ -98,7 +98,7 @@
     <span class="nav-text">Stream Fundamentals</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="what_is_a_stream.html">What is a Stream?</a>
+    <a class="nav-link" href="#stream-basics.adoc">What is a Stream?</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="intermediate_operations.html">Intermediate Operations</a>
