Update to latest version of page

--- a/jpa-streamer/0.1.0/stream-fundamentals/intermediate_operations.html
+++ b/jpa-streamer/0.1.0/stream-fundamentals/intermediate_operations.html
@@ -60,18 +60,12 @@
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
-    <h3 class="title"><a href="../introduction/overview.html">JPAStreamer Docs</a></h3>
+    <h3 class="title"><a href="../introduction/introduction.html">JPAStreamer Docs</a></h3>
 <ul class="nav-list">
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <span class="nav-text">Introduction</span>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../introduction/overview.html">Overview</a>
-  </li>
-</ul>
+    <a class="nav-link" href="../introduction/introduction.html">Introduction</a>
   </li>
 </ul>
   </li>
@@ -87,7 +81,26 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../getting-started/quick-start.html">Quick Start with JPAStreamer</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Integration</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../getting-started/spring_integration.html">Spring Integration</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../getting-started/hibernate_integration.html">Hibernate Integration</a>
+  </li>
 </ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../application-configuration/app_configuration.html">Application Configuration</a>
   </li>
 </ul>
   </li>
@@ -98,7 +111,7 @@
     <span class="nav-text">Stream Fundamentals</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#stream-basics.adoc">What is a Stream?</a>
+    <a class="nav-link" href="stream_basics.html">Stream Basics?</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="intermediate_operations.html">Intermediate Operations</a>
@@ -142,7 +155,7 @@
       <span class="title">JPAStreamer Docs</span>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="../introduction/overview.html">0.1.0</a>
+          <a href="../introduction/introduction.html">0.1.0</a>
         </li>
       </ul>
     </li>
@@ -154,10 +167,10 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../introduction/overview.html" class="home-link"></a>
+  <a href="../introduction/introduction.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
-    <li><a href="../introduction/overview.html">JPAStreamer Docs</a></li>
+    <li><a href="../introduction/introduction.html">JPAStreamer Docs</a></li>
     <li>Stream Fundamentals</li>
     <li><a href="intermediate_operations.html">Intermediate Operations</a></li>
   </ul>
