--- a/jpa-streamer/0.1.0/fetching-data/stream-examples.html
+++ b/jpa-streamer/0.1.0/fetching-data/stream-examples.html
@@ -60,18 +60,12 @@
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
-    <h3 class="title"><a href="../introduction/overview.html">JPAStreamer Docs</a></h3>
+    <h3 class="title"><a href="../introduction/introduction.html">JPAStreamer Docs</a></h3>
 <ul class="nav-list">
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <span class="nav-text">Introduction</span>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../introduction/overview.html">Overview</a>
-  </li>
-</ul>
+    <a class="nav-link" href="../introduction/introduction.html">Introduction</a>
   </li>
 </ul>
   </li>
@@ -87,7 +81,26 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../getting-started/quick-start.html">Quick Start with JPAStreamer</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Integration</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../getting-started/spring_integration.html">Spring Integration</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../getting-started/hibernate_integration.html">Hibernate Integration</a>
+  </li>
 </ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../application-configuration/app_configuration.html">Application Configuration</a>
   </li>
 </ul>
   </li>
@@ -98,7 +111,7 @@
     <span class="nav-text">Stream Fundamentals</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#stream-basics.adoc">What is a Stream?</a>
+    <a class="nav-link" href="../stream-fundamentals/stream_basics.html">Stream Basics?</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../stream-fundamentals/intermediate_operations.html">Intermediate Operations</a>
@@ -142,7 +155,7 @@
       <span class="title">JPAStreamer Docs</span>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="../introduction/overview.html">0.1.0</a>
+          <a href="../introduction/introduction.html">0.1.0</a>
         </li>
       </ul>
     </li>
@@ -154,10 +167,10 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="../introduction/overview.html" class="home-link"></a>
+  <a href="../introduction/introduction.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
-    <li><a href="../introduction/overview.html">JPAStreamer Docs</a></li>
+    <li><a href="../introduction/introduction.html">JPAStreamer Docs</a></li>
     <li>Fetching Data</li>
     <li><a href="stream-examples.html">Stream Examples</a></li>
   </ul>
@@ -166,7 +179,89 @@
   <div class="content">
 <article class="doc">
 <h1 class="page">Stream Examples</h1>
+<div class="sect1">
+<h2 id="_paging"><a class="anchor" href="#_paging"></a>Paging</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The following example demonstrates how to serve request for pages from a GUI or similar applications. The page number (starting with page = 0) and ordering will be given as parameters:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">private static final int PAGE_SIZE = 20;
 
+private List&lt;Film&gt; getPage(int page, Comparator&lt;Film&gt; comparator) {
+    log("getPage(" + page + ", " + comparator + ")");
+    return jpaStreamer.stream(Film.class)
+        .sorted(comparator)
+        .skip(page * PAGE_SIZE)
+        .limit(PAGE_SIZE)
+        .collect(Collectors.toList());
+}</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This method can e.g. be used to fetch the second page of films sorted by title in descending order:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">    getPage(1, Film$.title.reversed());</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_partition_by"><a class="anchor" href="#_partition_by"></a>Partition By</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Partitioning is a special case of grouping in which there are only two different classes: <code>false</code> or <code>true</code>. Java has its own partitioner that can be used to classify database entities. The example below classifies the films in two different categories: short and long films, where a long film is of length greater than 120 minutes.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">    Map&lt;Boolean, List&lt;Film&gt;&gt; map = jpaStreamer.stream(Film.class)
+        .collect(
+            Collectors.partitioningBy(Film$.length.greaterThan(120))
+        );
+
+    map.forEach((k, v) -&gt; {
+        System.out.format("long is %5s has %d films%n", k, v.size());
+    });</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This will print:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-text hljs" data-lang="text">long is false has 543 films
+long is  true has 457 films</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_one_to_many_relations"><a class="anchor" href="#_one_to_many_relations"></a>One-to-Many relations</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_many_to_one_relations"><a class="anchor" href="#_many_to_one_relations"></a>Many-to-One relations</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_many_to_many_relations"><a class="anchor" href="#_many_to_many_relations"></a>Many-to-Many relations</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_pivot_data"><a class="anchor" href="#_pivot_data"></a>Pivot Data</h2>
+<div class="sectionbody">
+
+</div>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
